--- a/Loyalty_Registration.html
+++ b/Loyalty_Registration.html
@@ -24,7 +24,7 @@
                         <li><a href="Cosmetics_and_Skincare.html">Cosmetics & Skincare</a></li>
                     </ul>
                 </li>
-                <li><a href="Order Page.html"">Order Page</a></li>
+                <li><a href="Order_Page.html"">Order Page</a></li>
                 <li><a href="Loyalty_Registration.html">Loyalty Registration</a></li>
             </ul>
         </nav>   
