--- a/Payment_Page.html
+++ b/Payment_Page.html
@@ -28,7 +28,7 @@
                 <li><a href="Loyalty_Registration.html">Loyalty Registration</a></li>
             </ul>
         </nav>   
-        <a class="Purchse-Button" href="Order Page.html">Purchase Items</a>      
+        <a class="Purchse-Button" href="Order_Page.html">Purchase Items</a>      
     </header>
     <main>
         <h2>Your Order Summary</h2>
